@@ -14,7 +14,7 @@ import errno
 import sys
 
 __all__ = [name for name in _posix.__all__ if not name.startswith('__doc__')]
-__all__.extend(['fsync', 'getenv', 'isatty', 'popen', 'putenv',
+__all__.extend(['getenv', 'isatty', 'popen', 'putenv',
                 'rename', 'rmdir', 'system',
                 'unsetenv', 'urandom', 'utime'])
 
@@ -168,153 +168,6 @@ def getenv(key, default=None):
     The optional second argument can specify an alternate default."""
     import os
     return os.environ.get(key, default)
-
-if _name == 'posix':
-    def symlink(src, dst):
-        """symlink(src, dst)
-
-        Create a symbolic link pointing to src named dst.
-        """
-        _posix_impl.symlink(src, sys.getPath(dst))
-
-    def readlink(path):
-        """readlink(path) -> path
-
-        Return a string representing the path to which the symbolic link
-        points.
-        """
-        return _posix_impl.readlink(sys.getPath(path))
-
-    def getegid():
-        """getegid() -> egid
-
-        Return the current process's effective group id."""
-        return _posix_impl.getegid()
-
-    def geteuid():
-        """geteuid() -> euid
-
-        Return the current process's effective user id."""
-        return _posix_impl.geteuid()
-
-    def getgid():
-        """getgid() -> gid
-
-        Return the current process's group id."""
-        return _posix_impl.getgid()
-
-    def getlogin():
-        """getlogin() -> string
-
-        Return the actual login name."""
-        return _posix_impl.getlogin()
-
-    def getpgrp():
-        """getpgrp() -> pgrp
-
-        Return the current process group id."""
-        return _posix_impl.getpgrp()
-
-    def getppid():
-        """getppid() -> ppid
-
-        Return the parent's process id."""
-        return _posix_impl.getppid()
-
-    def getuid():
-        """getuid() -> uid
-
-        Return the current process's user id."""
-        return _posix_impl.getuid()
-
-    def setpgrp():
-        """setpgrp()
-
-        Make this process a session leader."""
-        return _posix_impl.setpgrp()
-
-    def setsid():
-        """setsid()
-
-        Call the system call setsid()."""
-        return _posix_impl.setsid()
-
-    # This implementation of fork partially works on
-    # Jython. Diagnosing what works, what doesn't, and fixing it is
-    # left for another day. In any event, this would only be
-    # marginally useful.
-
-    # def fork():
-    #     """fork() -> pid
-    #
-    #     Fork a child process.
-    #     Return 0 to child process and PID of child to parent process."""
-    #     return _posix_impl.fork()
-
-    def kill(pid, sig):
-        """kill(pid, sig)
-
-        Kill a process with a signal."""
-        return _posix_impl.kill(pid, sig)
-
-    def wait():
-        """wait() -> (pid, status)
-
-        Wait for completion of a child process."""
-        import jarray
-        status = jarray.zeros(1, 'i')
-        res_pid = _posix_impl.wait(status)
-        if res_pid == -1:
-            raise OSError(status[0], strerror(status[0]))
-        return res_pid, status[0]
-
-    def waitpid(pid, options):
-        """waitpid(pid, options) -> (pid, status)
-
-        Wait for completion of a given child process."""
-        import jarray
-        status = jarray.zeros(1, 'i')
-        res_pid = _posix_impl.waitpid(pid, status, options)
-        if res_pid == -1:
-            raise OSError(status[0], strerror(status[0]))
-        return res_pid, status[0]
-
-    def fdatasync(fd):
-        """fdatasync(fildes)
-
-        force write of file with filedescriptor to disk.
-        does not force update of metadata.
-        """
-        _fsync(fd, False)
-
-    __all__.extend(['symlink', 'readlink', 'getegid', 'geteuid',
-                    'getgid', 'getlogin', 'getpgrp', 'getppid', 'getuid',
-                    'setpgrp', 'setsid', 'kill', 'wait', 'waitpid',
-                    'fdatasync'])
-
-def fsync(fd):
-    """fsync(fildes)
-
-    force write of file with filedescriptor to disk.
-    """
-    _fsync(fd, True)
-
-def _fsync(fd, metadata):
-    """Internal fsync impl"""
-    from org.python.core.io import FileDescriptors
-    rawio = FileDescriptors.get(fd)
-    rawio.checkClosed()
-
-    from java.io import IOException
-    from java.nio.channels import FileChannel
-    channel = rawio.getChannel()
-    if not isinstance(channel, FileChannel):
-        raise OSError(errno.EINVAL, strerror(errno.EINVAL))
-
-    try:
-        channel.force(metadata)
-    except IOException, ioe:
-        raise OSError(ioe)
 
 def isatty(fileno):
     """isatty(fd) -> bool
